; ModuleID = '/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-fakestack.c_thread_enter_fakestack.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/san/extr_kasan-fakestack.c_thread_enter_fakestack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @thread_enter_fakestack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @thread_enter_fakestack(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %5 = call i64 (...) @current_thread()
  store i64 %5, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load i64, i64* %4, align 8
  %10 = call i64 @kasan_lock_held(i64 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %16

13:                                               ; preds = %8, %1
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @kasan_lock(i32* %14)
  store i32 1, i32* %2, align 4
  br label %16

16:                                               ; preds = %13, %12
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i64 @current_thread(...) #1

declare dso_local i64 @kasan_lock_held(i64) #1

declare dso_local i32 @kasan_lock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
